<resources>
    <string name="app_name">Touch Time</string>
    <string name="welcome_message">Welcome To</string>
    <string name="button_student">STUDENT</string>
    <string name="button_lecturer">LECTURER</string>
    <string name="room_id">Enter Room ID eg. LG27</string>
    <string name="time_message">Choose a Time</string>
    <string name="button_go">View Room Timetable</string>
    <string name="butto_sign_in">Press To Sign In</string>
    <string name="title_activity_scaning_screen">ScaningScreen</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="button_nfc">Press for NFC scan</string>
    <string name="nfc_error_empty">Scan Error</string>
    <string name="nfc_scan_req">Please Scan NFC Tag</string>
    <string name="nfc_scan_req2">Hold Near Tag To Scan</string>
    <string name="nfc_no_capabilities">No NFC Capabilities</string>
    <string name="user_name">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="invalid_auth">Invalid Authentication</string>
    <string name="invalid_response">Response Error</string>
    <string name="invalid_room">Invalid Room ID</string>
    <string name="enable_nfc">Please Enable NFC</string>
</resources>